--- a/templates/default/category.html.twig
+++ b/templates/default/category.html.twig
@@ -3,17 +3,14 @@
 {% block title %}Hello DefaultController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
-
-<div class="example-wrapper">
-    This is the {{ category.name }} category list
-    <ul>
-        {% for product in category.getProducts() %}
-            <li>{{ product.name }}</li>
-        {% endfor %}
-    </ul>
-</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-12">
+                This is {{ category.name }} category!!!
+            </div>
+            <div class="col-12">
+                {{ include ('default/product/productCard.html.twig') }}
+            </div>
+        </div>
+    </div>
 {% endblock %}
