--- a/templates/default/parts/indexCarousel.html.twig
+++ b/templates/default/parts/indexCarousel.html.twig
@@ -1,14 +1,14 @@
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide mt-2" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img class="d-block w-100" src="{{ asset('images/reclama1.png') }}" alt="First slide">
+            <img class="d-block w-100" height="213px" src="{{ asset('images/reclama1.png') }}" alt="First slide">
         </div>
         <div class="carousel-item">
-            <img class="d-block w-100" src="{{ asset('images/reclama2.png') }}" alt="Second slide">
+            <img class="d-block w-100"  src="{{ asset('images/reclama2.png') }}" alt="Second slide">
         </div>
     </div>
     <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
