--- a/templates/default/product/productCard.html.twig
+++ b/templates/default/product/productCard.html.twig
@@ -1,20 +1,18 @@
 {% block content %}
-    <div class="col-12">
-         <div class="row">
-             <div class="col-3 mt-5 px-4  pt-2">
-                 <div class="card">
-                     <a href="#"><img class="card-img-top" src="images/" alt="nume"></a>
-                     <div class="card-body text-center">
-                         <h5 class="card-title">name</h5>
-                         <p><a href=#>vendor</a></p>
-                         <h6>
-                             <s>price <span>Lei</span></s>
-                             <span class="product-this-deal">discount</span>
-                             <s>price <span>Lei</span></s>
-                         </h6>
-                     </div>
-                 </div>
-             </div>
-         </div>
-     </div>
+    <div class="col-3 mt-2 px-4  pt-2">
+        <div class="card">
+            <a href="#"><img class="card-img-top" src="images/{{ product.getImages().first.file }}" alt="{{ product.name }}"></a>
+            <div class="card-body text-center">
+                <h5 style="height: 40px" class="card-title">{{ product.name }}</h5>
+                <p><a href={{ url('vendor', {'vendor':product.getVendor().id}) }}>{{ product.getVendor().name }}</a></p>
+                <p>
+                    <h4>{{ product.price }} <span>Lei</span>
+                    <span class="product-this-deal">(-{{ product.discount }}%)</span>
+                    </h4>
+                    <h3 style="color: red;">{{ product.getFinalPrice() }} <span>Lei</span></h3>
+                </p>
+                <a href="#" class="btn btn-secondary">Adauga in cos</a>
+            </div>
+        </div>
+    </div>
 {% endblock %}
