--- a/templates/default/parts/header.html.twig
+++ b/templates/default/parts/header.html.twig
@@ -99,12 +99,11 @@
                                             {% endfor %}
                                         </div>
                                     </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link text-white" href="#">Suport clienti</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link text-white" href="#">Admin Panel</a>
-                                    </li>
+                                    {% if is_granted('ROLE_ADMIN')  %}
+                                        <li class="nav-item">
+                                            <a class="nav-link text-white" href="{{ url('user_index') }}">Admin Panel</a>
+                                        </li>
+                                    {% endif %}
                                 </ul>
                             </div>
                         </nav>
