--- a/templates/default/vendor.html.twig
+++ b/templates/default/vendor.html.twig
@@ -3,13 +3,15 @@
 {% block title %}Hello DefaultController!{% endblock %}
 
 {% block body %}
-    <div class="container">
-        <div class="row">
-            <div class="col-12">
-                This is {{ vendor.name }} vendor!!!
-            </div>
-            <div class="col-12">
+    <div class="container-fluid bg-light">
+        <div class="container">
+            <div class="row">
+                <div class="col-12 mt-3">
+                    <h2>{{ vendor.name }} </h2> <strong><p>{{ vendor.getProducts()|length }} produse</p></strong>
+                </div>
+                <div class="col-12">
 
+                </div>
             </div>
         </div>
     </div>
