updated index and added footer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,7 +20,7 @@
     </head>
     <body>
     {{ include ('default/parts/header.html.twig') }}
-
         {% block body %}{% endblock %}
+    {{ include ('default/parts/footer.html.twig') }}
     </body>
 </html>
