--- a/templates/default/index.html.twig
+++ b/templates/default/index.html.twig
@@ -46,6 +46,21 @@
                     <div class="col-12">
                         <h3>Laptop-uri</h3>
                     </div>
+                    {% for product in productsLaptop %}
+                        {{ include ('default/product/productCard.html.twig') }}
+                    {% endfor %}
+                </div>
+            </div>
+        </div>
+        <div class="container-fluid bg-light">
+            <div class="container mt-3">
+                <div class="row">
+                    <div class="col-12">
+                        <h3>Televizoare</h3>
+                    </div>
+                    {% for product in productsTV %}
+                        {{ include ('default/product/productCard.html.twig') }}
+                    {% endfor %}
                 </div>
             </div>
         </div>
