--- a/templates/default/vendor.html.twig
+++ b/templates/default/vendor.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello DefaultController!{% endblock %}
+{% block title %}{{ vendor.name }} - GEN Market{% endblock %}
 
 {% block body %}
     <div class="container-fluid bg-light">
