--- a/templates/reset_password/request.html.twig
+++ b/templates/reset_password/request.html.twig
@@ -1,22 +1,31 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Reset your password{% endblock %}
+{% block title %}Ai uitat parola?{% endblock %}
 
 {% block body %}
     {% for flashError in app.flashes('reset_password_error') %}
         <div class="alert alert-danger" role="alert">{{ flashError }}</div>
     {% endfor %}
-    <h1>Reset your password</h1>
+    <div class="bg-light">
+        <div class="container" style="height: 500px">
+            <div class="row">
+                <div class="col-12 mt-4">
+                    {{ form_start(requestForm) }}
+                    {{ form_row(requestForm.email) }}
+                    <div>
+                        <small>
+                            Introdu adresa de email si iti vom trimite un
+                            link pentru a vă reseta parola.
+                        </small>
+                    </div>
 
-    {{ form_start(requestForm) }}
-        {{ form_row(requestForm.email) }}
-        <div>
-            <small>
-                Enter your email address and we will send you a
-                link to reset your password.
-            </small>
+                    <button class="btn btn-primary">Trimite</button>
+                    {{ form_end(requestForm) }}
+                    <h1>Reseteaza-ti parola</h1>
+                </div>
+            </div>
         </div>
+    </div>
 
-        <button class="btn btn-primary">Send password reset email</button>
-    {{ form_end(requestForm) }}
+
 {% endblock %}
