--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -1,6 +1,8 @@
 {% block title %}User index{% endblock %}
 
 {% block body %}
+
+    <a href="{{ url('adminPanel') }}">< Back</a>
     <h1>User index</h1>
 
     <table class="table">
