--- a/templates/product/index.html.twig
+++ b/templates/product/index.html.twig
@@ -70,7 +70,17 @@
                 </div>
             </div>
         </div>
-        {{ dump(product) }}
+        <div class="container mb-5">
+            <div class="row">
+                <div class="col-12">
+                    <h1>Descriere</h1>
+                </div>
+                <div class="col-12">
+                    <p>{{ product.description }}</p>
+                </div>
+            </div>
+        </div>
+
     </div>
 
 {% endblock %}
