--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -33,7 +33,7 @@
                             </div>
                         #}
 
-                        <button class="btn btn-lg btn-secondary" type="submit">
+                        <button class="btn btn-lg btn-secondary mt-2" type="submit">
                             Intra in cont
                         </button>
                     </form>
