added VendorProductForm, CRUD Product/Category/Vendor

--- a/templates/default/adminPanel.html.twig
+++ b/templates/default/adminPanel.html.twig
@@ -22,5 +22,29 @@
                 <a href="{{ url('user_index') }}">User index Link</a>
             </td>
         </tr>
+        <tr>
+            <td>
+                Product index -
+            </td>
+            <td>
+                <a href="{{ url('crud_product_index') }}">Product index Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Vendor index -
+            </td>
+            <td>
+                <a href="{{ url('crud_vendor_index') }}">Vendor index Link</a>
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Category index -
+            </td>
+            <td>
+                <a href="{{ url('crud_category_index') }}">Category index Link</a>
+            </td>
+        </tr>
     </tbody>
 </table>
