--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -4,10 +4,10 @@
 
 {% block body %}
     <div class="bg-light">
-        <div class="container mt-3" style="height: 500px">
+        <div class="container" style="height: 500px">
             <div class="row">
                 <div class="col-4">
-                    <form method="post">
+                    <form method="post" class="mt-3">
                         {% if error %}
                             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
                         {% endif %}
